fix(frontend/settings): make colour of disabled save hotkey button readable

--- a/app/frontend/src/Settings/Hotkeys/HotkeyDialog.css
+++ b/app/frontend/src/Settings/Hotkeys/HotkeyDialog.css
@@ -11,3 +11,8 @@
 .hotkey-dialog .delete-button {
   color: red;
 }
+
+.hotkey-dialog .MuiButton-root:disabled {
+  color: var(--settings-text-color) !important;
+  opacity: 0.7;
+}
